--- a/assignment1.html
+++ b/assignment1.html
@@ -21,6 +21,7 @@
     border-radius: 20px;
     color: white;
     padding: 15px 32px;
+    margin: 5px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
