--- a/assignment1.html
+++ b/assignment1.html
@@ -72,6 +72,8 @@
         <li>Tennis</li>
         <li>Baking for Charity</li>
       </ul>
+      
+      <h6>Ps. Sorry about the strange formatting. I was being fancy with my buttons and somehow somewhere something went wrong and I spent a lot of time tryign to fix it. However I was unable to find a solution and so I'll just have to turn it in like this. <br /> Oh well at least my buttons look cool.</h6>
   
   </body>
 
