--- a/assessment2.html
+++ b/assessment2.html
@@ -18,12 +18,6 @@
   
   <hr>
   
-  <h6>I really don't know what this is</h6>
-  
-  <h1>(ಥ ͜ʖಥ) ( ཀ ʖ̯ ཀ) &lt; ( ͠° ͟ʖ ͠°)ง</h1>
-  
-  <h1>(╯ຈ _ຈ) ╯︵ ┻━┻) <br /> (ノಠ益ಠ)ノ彡┻━┻</h1>
-  
   <h1>???????????????????????????????????</h1>
   
   <p class="center red blueborder"> "We hold these truths to be self-evident, that all men are created equal, that they are endowed by their Creator with certain unalienable Rights, that among these are Life, Liberty and the pursuit of Happiness. — That to secure these rights, Governments are instituted among Men, deriving their just powers from the consent of the governed, — That whenever any Form of Government becomes destructive of these ends, it is the Right of the People to alter or to abolish it, and to institute new Government, laying its foundation on such principles and organizing its powers in such form, as to them shall seem most likely to effect their Safety and Happiness."<br /> (Declaration of Independence) <br /> <a href="http://littletonpublicschools.net/schools/arapahoe-high-school" target="_blank">I think it's a little broken. \(*__*)/<a/> <br /> But just got to go with the flow</p>
@@ -34,7 +28,7 @@
   
   <hr>
   
-  <p id="para3"> I guess this is it :] <a href="https://www.apple.com" target="_blank">This is most likely very extremely broken ¯\_(ツ)_/¯</a> EXTREMELY BROKEN <br /> DUN DUN DUN</p>
+  <p id="para3"> Once upon a time... <a href="https://www.apple.com" target="_blank"> ...the end. </a> ... <br /> Silver and Gold. </p>
   
   <hr>
   
@@ -42,15 +36,9 @@
   
   <hr>
   
-  <p>\( ☉ ᨎ ☉ )/</p>
-  
-  <h5>In all honesty I have no idea what is happening right now. The system is also probably very broken but oh well.</h5>
-  
-  <hr>
-  
   <p>By Piper Koustas</p>
   
-  <h6>┬┴┬┴┤(･_├┬┴┬┴</h6>
+  <h6>Adios</h6>
   
 </body>
 
