--- a/assignment3.html
+++ b/assignment3.html
@@ -47,6 +47,8 @@
     }
     </script>  
     
+    <h6>By the way once you click play you are stuck playing the game forever. There is no giving up. You must guess the correct number or else. But really nothing will happen if you don't.</h6>
+    
   </body>
   
 </html>
