--- a/assignment3.html
+++ b/assignment3.html
@@ -6,6 +6,16 @@
   
   <title>Assignment 3</title>
   
+  <style>
+    
+   html {
+  background-color:black;
+  color:white;
+  font-family: "Courier New", Courier, monospace;
+  }
+    
+  </style>
+  
 </head>
 
   <body>
