--- a/finalproject.html
+++ b/finalproject.html
@@ -96,7 +96,7 @@ html {
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Useless...</a>
     <div class="dropdown-content">
-      <a href="">RNG</a>
+      <a href="piperpei.github.io/RNG.html">RNG</a>
       <a href="#">Buttons</a>
       <a href="#">Facts</a>
     </div>
