--- a/finalproject.html
+++ b/finalproject.html
@@ -98,7 +98,7 @@ html {
     <div class="dropdown-content">
       <a href="piperpei.github.io/RNG.html">RNG</a>
       <a href="#">Buttons</a>
-      <a href="#">Facts</a>
+      <a href="piperpei.github.io/facts.html">Facts</a>
     </div>
   </li>
   <li class="dropdown">
