--- a/finalproject.html
+++ b/finalproject.html
@@ -109,7 +109,7 @@ html {
       <a href="#">About Me</a>
     </div>
   </li>
-  <li style="float:right"><a class="class" href="#">Page Source</a></li>
+  <li style="float:right"><a class="class" href="view-source:https://piperpei.github.io/finalproject.html">Page Source</a></li>
 </ul>
   
 <h1>Final Project</h1>
