--- a/finalproject.html
+++ b/finalproject.html
@@ -106,7 +106,7 @@ html {
     <div class="dropdown-content">
       <a href="https://piperpei.github.io/assignment3.html">Number Guess</a>
       <a href="https://piperpei.github.io/assignment5.html">Reaction Tester</a>
-      <a href="#">About Me</a>
+      <a href="piperpei.github.io/aboutme?.html">About Me</a>
     </div>
   </li>
   <li style="float:right"><a class="class" href="view-source:https://piperpei.github.io/finalproject.html">Page Source</a></li>
