--- a/RNG.html
+++ b/RNG.html
@@ -107,7 +107,7 @@
   
   <br />
   
-  <button class="gobackhome">Go Back Home</button>
+  <button class="gobackhome" href="https://piperpei.github.io/finalproject.html">Go Back Home</button>
   
   <script>
     
