--- a/aboutme.html
+++ b/aboutme.html
@@ -54,6 +54,7 @@
     display: inline-block;
     width:100%;
     font-size: 16px;
+    font-family: "Courier New", Courier, monospace;
     -webkit-transition-duration: 0.7s;
     transition-duration: 0.7s;
     cursor: pointer;
