--- a/facts.html
+++ b/facts.html
@@ -292,7 +292,7 @@ right-handed. When the intruding army would climb the stairs they would not be a
   
   <p>...etc. but I'm too lazy to find any more.</p>
   
-  <button class="gobackhome">Go Back Home</button>
+  <a class="gobackhome" href="https://piperpei.github.io/finalproject.html">Go Back Home</a>
     
   </body>
   
