--- a/finalproject.html
+++ b/finalproject.html
@@ -97,7 +97,7 @@ html {
     <a href="javascript:void(0)" class="dropbtn">Useless...</a>
     <div class="dropdown-content">
       <a href="piperpei.github.io/RNG.html">RNG</a>
-      <a href="#">Buttons</a>
+      <a href="piperpei.github.io/buttons.html">Buttons</a>
       <a href="piperpei.github.io/facts.html">Facts</a>
     </div>
   </li>
